# scanner-manager

./: .gitignore  .gitlab-ci.yml  .markdownlint.jsonc  .markdownlintignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app_settings.json  coverage_maps.py  device_manager.py  docker-compose.sonar.prod.yml  metastore.py  pyproject.toml  requirements-dev.txt  requirements.txt  rr_api.py  scanner_manager.meta.json  scanner_manager.py  sdcard.py  sonar-project.properties  sonar-project.vps.properties  sonar_scan.ps1  sonar_status.ps1  sonar_truststore.ps1  sonar_upload.ps1  uniden_tools.py  updater.py  workspace.code-workspace  zip_county_map.json
.cursor/rules/: ai-dev-notes.mdc
.github/: DISCUSSIONS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.sonar/: cloud_issues_post_push_analysis.md  issues_checklist_r7.json
AI/Dev/: CONVENTIONS.md  FIRMWARE_UPDATER.md  MACHINES.md  MULTI_DEVICE_GUI.md  MULTI_SCANNER_BACKEND.md  PROJECT_STATE.md  README.md  WORKER_LOG.md  WORKSTREAMS.md
AI/Dev/RE/: README.md  com6_listen.py  serial_probe.py
AI/Dev/RE/docs/: AUTOMATION.md  BT885.md  (+11 more)
Metacache/: EXPORT_POLICY.md  README.md  ROADMAP.md
Metacache/Dev/: BUILD_SYSTEM.md  CONVENTIONS.md  FIRMWARE_UPDATER.md  LINUX_BARE_METAL_HANDOFF.md  MACHINES.example.md  MULTI_DEVICE_GUI.md  MULTI_SCANNER_BACKEND.md  README.md  REVIEW_2026-07-docs.md  REVIEW_2026-07.md  SONARQUBE.md  WORKSTREAMS.md
Metacache/Dev/RE/: README.md
Metacache/docs/: PAGE_INVENTORY.md  README.md  RELEASE.md  adding-a-scanner.md  forum-announcement.md  hpe-format.md  rr-api-notes.md  style-guide.md  uniden-behavior.md
audio/: __init__.py  capture.py  encoder.py
core/: __init__.py  _util.py  app_updater.py  appinfo.py  coverage_maps.py  device_manager.py  hpd.py  metastore.py  path_utils.py  paths.py  removable_media.py  rr_api.py  sdcard.py  uniden_tools.py
data/: __init__.py  devices.json  scanner_profiles.json  uniden_installers.json  zip_county_map_sample.json
docs/: RELEASE.md  adding-a-scanner.md  forum-announcement.md  hpe-format.md  rr-api-notes.md  uniden-behavior.md
firmware/: __init__.py  ftp_client.py  library.py  updater.py  vendor_ftp_transport.py
gui/: __init__.py  app.py  devices_dialog.py  header.py  main_window.py  windows.py
gui/dialogs/: __init__.py  changes.py  city_manager.py  profile_snapshots.py  report_issue.py  sync_conflict.py  uniden_tools.py  update_available.py  workspaces.py
gui/editor/: __init__.py  bt885_inspector.py  coverage_panel.py  details_panel.py  display_helpers.py  editor_dock.py  entry_dialog.py  hpdb_cache.py  hpdb_tree.py  location_filter.py  location_sim_bar.py  profile_panels.py
gui/firmware/: __init__.py  firmware_dock.py
gui/live/: __init__.py  controllers.py  live_dock.py  scanner_control.py  virtual_scanner.py  widgets.py
gui/streaming/: __init__.py  streaming_dock.py
gui/widgets/: __init__.py  scaling_label.py
legacy_tk/: coverage_ui.py  freq_utils.py  geo_tables.py  import_dialogs.py  literals.py  rr_html_parsers.py  rr_parsing.py  scanner_manager.py  sd_paths.py  sm_helpers.py
packaging/: README.md  entry_qt.py  scanner-manager.spec
packaging/linux/: 99-uniden-scanner.rules  scanner-manager.desktop
scanner_drivers/: __init__.py  serial_io.py  serial_main.py  serial_sub.py  usb_detect.py
scanner_profiles/: __init__.py  base.py  bt885.py  compat.py  registry.py  sds100.py
scripts/: build_paths.py  build_provenance.py  build_release.py  check_lockfile_stale.py  check_quality_gate.ps1  check_wiki_tone.py  extract_changelog.py  generate_r4_checklist.py  generate_sonar_checklist.py  linux_appimage.py  metacache_export_rules.yaml  pin_uniden_hashes.py  print_export_filter_args.py  publish_github.ps1  publish_github.sh  re_unpack.ps1  refresh_lockfile.ps1  refresh_lockfile.sh  run_forgejo_mcp.ps1  sanitize_for_github.py  sonar_api.ps1  sonar_compare.ps1  sonar_config.ps1  sonar_scan.ps1  sonar_scan.sh  sonar_scan_cloud.ps1  sonar_status_cloud.ps1  sonar_truststore.ps1  sonar_truststore.sh  sonarcloud_disable_autoscan.sh  verify_release_artifact.ps1  verify_release_artifact.sh
streaming/: __init__.py  broadcastify.py  bus.py  icecast.py  server.py
tests/: _qt_fakes.py  conftest.py  test_about_and_donate.py  test_audio_pipeline.py  test_bt885_parity.py  test_coverage_maps.py  test_crash_handler.py  test_detect_from_card.py  test_dev_mcp.py  test_device_manager.py  test_firmware_ftp_client.py  test_firmware_library.py  test_firmware_updater.py  test_frozen_smoke.py  test_hpd.py  test_import_boundaries.py  test_legacy_tk_helpers.py  test_linux_appimage.py  test_merge_and_zip.py  test_metastore.py  test_metastore_edge.py  test_paths_and_removable.py  test_profiles_and_snapshots.py  test_qt_coverage_gaps.py  test_qt_dialogs.py  test_qt_editor.py  test_qt_firmware.py  test_qt_live.py  test_qt_live_dock.py  test_qt_location_sim.py  test_qt_scaling_label.py  test_qt_scanner_control.py  test_qt_shell.py  test_qt_streaming.py  test_qt_streaming_dock.py  test_qt_switch_perf.py  test_qt_virtual_scanner.py  test_qt_windows.py  test_qt_workspace_load.py  test_re_tools.py  (+19 more)
tests/fixtures/: README.md
tests/fixtures/captures/: sds-capture-20260503-170346.json
virtual_sd/: __init__.py  virtual_card.py
wiki/: Adding-a-Scanner.md  Alerts-and-Discovery.md  Alerts.md  Architecture.md  Channel-List-Management.md  CityTable-and-Custom-Locations.md  Coverage-Tools.md  Firmware-Updater.md  Glossary.md  Home.md  Install.md  Qt-UI.md  Quickstart.md  RE-Architecture.md  RE-Firmware.md  RE-Inter-MCU-Bus.md  RE-SD-Card.md  RE-Sentinel.md  RE-Serial-Protocol.md  RE-Toolchain.md  RE-USB-Modes.md  RE-Update-Endpoints.md  RE-Workflows.md  RadioReference-Import.md  Reverse-Engineering.md  Scanner-Button-Service-Types.md  Streaming-Server.md  Troubleshooting.md  Uniden-Tools-Integration.md  Updating.md  Virtual-Scanner-Roadmap.md  Workspaces-and-Sync.md  ZIP-and-GPS-Simulation.md  _Sidebar.md
(+202 files in other folders)
