[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Dependency lock SSOT: requirements.lock (pip-compile from this file).
# Regenerate: pip-compile --extra=dev --extra=full -o requirements.lock pyproject.toml
# Sonar text:S8565 — pip-tools lock file (not uv.lock/poetry.lock); see Metacache/Dev/SONARQUBE.md.

[tool.pip-tools]
output-file = "requirements.lock"

[project]
name = "beartracker-885-scanner-manager"
version = "0.11.2"
description = "Multi-scanner Qt desktop app for Uniden BearTracker 885 and SDS100/200 — HPD editing, live serial mirror, LAN streaming, firmware updates, ZIP/coverage simulation, and RadioReference import."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Scanner Manager contributors" },
]
keywords = [
    "uniden",
    "beartracker",
    "bt885",
    "sds100",
    "sds200",
    "scanner",
    "pyside6",
    "qt",
    "radioreference",
    "hpd",
    "scanning",
    "ham-radio",
    "firmware",
    "streaming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Utilities",
]
dependencies = [
    # Reproducible installs: compile with pip-tools; lock SSOT is
    # requirements.lock at repo root (not uv.lock / poetry.lock).
    # Qt + supporting libs are now required - the default
    # ``scanner-manager`` console script targets the PySide6 shell.
    # Audio + serial are imported lazily so the app still boots if
    # sounddevice / pyserial fail to load (e.g. headless CI).
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "pyserial>=3.5",
    "sounddevice>=0.4.6",
    "numpy>=1.21",
]

[project.optional-dependencies]
radioreference = ["zeep>=4.2", "keyring>=24.0"]
map = ["tkintermapview>=1.29"]
donate-qr = ["qrcode>=7.4"]
# Legacy Tk dependency group; only needed if the user pins the
# ``scanner-manager-tk`` entry. Tk itself ships with CPython on
# Windows + macOS, so this group is a no-op on those platforms.
tk = []
qt = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "pyserial>=3.5",
    "sounddevice>=0.4.6",
    "numpy>=1.21",
]
streaming = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "websockets>=12.0",
    "qrcode>=7.4",
]
firmware = [
    # ftplib is stdlib; nothing extra required for FTP discovery.
]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
    "pytest-cov>=5",
    "pytest-xdist>=3.5",
    "pip-tools>=7.4",
    "build>=1.0",
    "ruff>=0.5",
    "mcp>=1.0",
    "pyinstaller>=6.0",
]
full = [
    "zeep>=4.2",
    "keyring>=24.0",
    "tkintermapview>=1.29",
    "qrcode>=7.4",
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "pyserial>=3.5",
    "sounddevice>=0.4.6",
    "numpy>=1.21",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/disturbedkh/scanner-manager"
Wiki = "https://github.com/disturbedkh/scanner-manager/wiki"
Issues = "https://github.com/disturbedkh/scanner-manager/issues"
Changelog = "https://github.com/disturbedkh/scanner-manager/blob/main/CHANGELOG.md"
Donate = "https://paypal.me/gvillescanner"

[project.scripts]
# Phase 6 cutover: the Qt rebuild is now the default `scanner-manager`
# entry. The legacy Tkinter app is still shipped as
# `scanner-manager-tk` for one release as an emergency fallback.
scanner-manager = "gui.app:main"
scanner-manager-qt = "gui.app:main"
scanner-manager-tk = "legacy_tk.scanner_manager:main"

[tool.setuptools]
packages = [
    "core",
    "legacy_tk",
    "scanner_profiles",
    "scanner_drivers",
    "audio",
    "streaming",
    "firmware",
    "virtual_sd",
    "gui",
    "gui.editor",
    "gui.live",
    "gui.streaming",
    "gui.firmware",
    "gui.dialogs",
]

[tool.setuptools.package-data]
"*" = ["data/*.json"]

[tool.pytest.ini_options]
# Limit test discovery to the canonical tests/ tree so RE lab scripts
# (Metacache/Dev/RE/tools/...) that happen to start with `test_` aren't
# scooped up. Those scripts live or die on a real serial port.
testpaths = ["tests"]
markers = [
    "unit: pure logic, no GUI, no network (default fast tier)",
    "integration: multi-module, filesystem, subprocess, network",
    "qt: requires PySide6 + pytest-qt (headless OK)",
    "slow: long-running; excluded from default CI",
    "requires_serial: needs COM port / hardware",
]

[tool.coverage.run]
source_pkgs = [
    "core",
    "gui",
    "scanner_profiles",
    "scanner_drivers",
    "firmware",
    "streaming",
    "audio",
    "virtual_sd",
]
omit = [
    "tests/*",
    "dev_mcp/*",
    "**/__init__.py",
    # Tk monolith + UI modules: Sonar still analyzes for issues; not in pytest-cov gate.
    "legacy_tk/*",
]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = [
    "E501",
    "E402",
    "E741",
    "B008",
]
